--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.12",
+    "@twa-dev/sdk": "^7.10.1",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "quasar": "^2.17.1",
     "vue": "^3.5.10"
