--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@twa-dev/sdk": "^7.10.1",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "quasar": "^2.17.1",
-    "vue": "^3.5.10"
+    "vue": "^3.5.10",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.8.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "sass-embedded": "^1.80.2",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.5.3",
     "vite": "^5.4.8",
     "vue-tsc": "^2.1.6"
