--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "quasar": "^2.17.1",
     "vue": "^3.5.10",
+    "vue-i18n": "10",
     "vue-router": "4"
   },
   "devDependencies": {
