--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "t-mini-app-vite",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@quasar/extras": "^1.16.12",
-    "@twa-dev/sdk": "^7.10.1",
-    "@vitejs/plugin-basic-ssl": "^1.1.0",
-    "quasar": "^2.17.1",
-    "vue": "^3.5.10",
-    "vue-i18n": "10",
-    "vue-router": "4"
-  },
-  "devDependencies": {
-    "@quasar/vite-plugin": "^1.8.0",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "sass-embedded": "^1.80.2",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.8",
-    "vue-tsc": "^2.1.6"
-  }
+	"name": "t-mini-app-vite",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc -b && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@quasar/extras": "^1.16.12",
+		"@telegram-apps/sdk": "^1.1.3",
+		"@twa-dev/sdk": "^7.10.1",
+		"@vitejs/plugin-basic-ssl": "^1.1.0",
+		"quasar": "^2.17.1",
+		"vue": "^3.5.10",
+		"vue-i18n": "10",
+		"vue-router": "4"
+	},
+	"devDependencies": {
+		"@quasar/vite-plugin": "^1.8.0",
+		"@vitejs/plugin-vue": "^5.1.4",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.47",
+		"sass-embedded": "^1.80.2",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.5.3",
+		"vite": "^5.4.8",
+		"vue-tsc": "^2.1.6"
+	}
 }
