--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@quasar/extras": "^1.16.12",
 		"@telegram-apps/sdk": "^1.1.3",
+		"@tonconnect/sdk": "^3.0.5",
 		"@twa-dev/sdk": "^7.10.1",
 		"@vitejs/plugin-basic-ssl": "^1.1.0",
 		"quasar": "^2.17.1",
